FIx overflow issue
Fix overflow issue by overwriting body margin set by user agent style sheet.

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -12,7 +12,9 @@ main {
     height: 60vh;
     
 }
-
+body{
+    margin:0;
+}
 /* Search bar */
 .search-bar{
     color: #e4e6e9;
